--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -25,7 +25,7 @@
   "certificateCreate.step-one.enum.vaccination": "Impfung",
   "certificateCreate.step-one.enum.test": "Negativer Test",
   "certificateCreate.step-one.enum.recovery": "Genesen (Positiver Test)",
-  "certificateCreate.step-two.vaccinationinformation": "Wichtig: Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3",
+  "certificateCreate.step-two.vaccinationinformation": "Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3.",
   "certificateCreate.step-three.title": "Zertifikatvorschau",
   "certificateCreate.step-three.description": "Bitte überprüfen Sie die eingegebenen Daten vor der Generierung des Zertifikats",
   "certificateCreate.step-three.dose": "Dosis",
@@ -44,6 +44,7 @@
   "certificateRevoke.uvci": "UVCI",
   "common.next": "Weiter",
   "common.back": "Zurück",
+  "common.important": "Wichtig",
   "common.language.de": "Deutsch",
   "common.language.fr": "Französisch",
   "common.language.it": "Italienisch",
