--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccination",
   "certificateCreate.step-one.enum.test": "Negative test",
   "certificateCreate.step-one.enum.recovery": "Recovered (positive test)",
-  "certificateCreate.step-two.vaccinationinformation": "Important: a person is only considered fully vaccinated and the associated COVID certificate is only valid if the number of doses received and the number of doses required is identical, e.g. recovery + vaccination: 1/1, vaccination with 2 doses: 2/2, booster 3/3",
+  "certificateCreate.step-two.vaccinationinformation": "a person is only considered fully vaccinated and the associated COVID certificate is only valid if the number of doses received and the number of doses required is identical, e.g. recovery + vaccination: 1/1, vaccination with 2 doses: 2/2, booster 3/3.",
   "certificateCreate.step-three.title": "Certificate preview",
   "certificateCreate.step-three.description": "Please check the data you entered before generating the certificate",
   "certificateCreate.step-three.dose": "Dose",
@@ -44,6 +44,7 @@
   "certificateRevoke.uvci": "UVCI",
   "common.next": "Next",
   "common.back": "Back",
+  "common.important": "Important",
   "common.language.de": "German",
   "common.language.fr": "French",
   "common.language.it": "Italian",
