--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,7 +25,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccin",
   "certificateCreate.step-one.enum.test": "Test négatif",
   "certificateCreate.step-one.enum.recovery": "Guérison (test positif)",
-  "certificateCreate.step-two.vaccinationinformation": "Important : la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
+  "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
   "certificateCreate.step-three.title": "Aperçu du certificat",
   "certificateCreate.step-three.description": "Merci de vérifier l'exactitude des données saisies avant la génération du certificat.",
   "certificateCreate.step-three.dose": "Dose",
@@ -44,6 +44,7 @@
   "certificateRevoke.uvci": "UVCI",
   "common.next": "Suivant",
   "common.back": "Retour",
+  "common.important": "Important",
   "common.language.de": "Allemand",
   "common.language.fr": "Français",
   "common.language.it": "Italien",
