--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -6,6 +6,7 @@
   "certificateCreate.form.label.personalData.surName": "Cognome",
   "certificateCreate.form.label.personalData.birthdate": "Data di nascita",
   "certificateCreate.form.label.personalData.certificateLanguage": "Lingua del certificato",
+  "certificateCreate.form.label.vaccine.doses.info": "<b>it:Wichtig</b>: Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3\" <a href=\"https://www.bag.admin.ch/dam/bag/de/dokumente/mt/k-und-i/aktuelle-ausbrueche-pandemien/2019-nCoV/impfempfehlung-covid-19.pdf.download.pdf/Impfempfehlung%20f%C3%BCr%20mRNA-Impfstoffe%20gegen%20Covid-19.pdf \">Impfempfehlung</a>",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccino",
   "certificateCreate.form.label.vaccine.doseNumber": "Dosi ricevute",
   "certificateCreate.form.label.vaccine.totalDoses": "Dosi necessarie",
@@ -25,7 +26,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
-  "certificateCreate.step-two.vaccinationinformation": "Importante: la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
+  "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
   "certificateCreate.step-three.title": "Anteprima del certificato",
   "certificateCreate.step-three.description": "Controllare i dati inseriti prima di generare il certificato",
   "certificateCreate.step-three.dose": "Dose",
@@ -44,6 +45,7 @@
   "certificateRevoke.uvci": "UVCI",
   "common.next": "Avanti",
   "common.back": "Indietro",
+  "common.important": "Importante",
   "common.language.de": "Tedesco",
   "common.language.fr": "Francese",
   "common.language.it": "Italiano",
