fix(revocation): update dashboard text
VACCINECER-732

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,7 @@
   "certificateCreate.step-four.download": "Download certificate",
   "certificateCreate.step-four.generateNew": "Generate new certificate",
   "certificateRevoke.button": "Revoke certificate",
-  "certificateRevoke.instructions": "You can revoke generated certificates here. They will then appear on a blacklist.",
+  "certificateRevoke.instructions": "You can revoke generated certificates here. They will then appear on a revocation list.",
   "certificateRevoke.link": "Revoke certificate",
   "certificateRevoke.success": "Certificate with UVCI {{uvci}} was revoked successfully.",
   "certificateRevoke.title": "Revoke certificate",
@@ -54,7 +54,7 @@
   "dashboard.createCertificate.description": "You can generate a new certificate here.",
   "dashboard.createCertificate.action": "Generate certificate",
   "dashboard.invalidateCertificate.title": "Revoke certificate",
-  "dashboard.invalidateCertificate.description": "You can revoke generated certificates here. They will then appear on a blacklist.",
+  "dashboard.invalidateCertificate.description": "You can revoke generated certificates here. They will then appear on a revocation list.",
   "dashboard.invalidateCertificate.action": "Revoke certificate",
   "dashboard.otp.title": "Generate new OTP",
   "dashboard.otp.description": "You can generate a new OTP here",
