--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,7 @@
   "certificateCreate.step-four.download": "Download certificate",
   "certificateCreate.step-four.generateNew": "Generate new certificate",
   "certificateRevoke.button": "Revoke certificate",
-  "certificateRevoke.instructions": "You can revoke generated certificates here. They will then appear on a blacklist.",
+  "certificateRevoke.instructions": "You can revoke generated certificates here. They will then appear on a revocation list.",
   "certificateRevoke.link": "Revoke certificate",
   "certificateRevoke.success": "Certificate with UVCI {{uvci}} was revoked successfully.",
   "certificateRevoke.title": "Revoke certificate",
