fix(revocation): handle error code sent by the backend
VACCINECER-819

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -85,5 +85,7 @@
   "otp.instructions": "Sie können hier einen Geheimschlüssel erzeugen und in die Zwischenablage kopieren.",
   "otp.key": "Geheimschlüssel",
   "otp.link": "OTP generieren",
-  "otp.title": "Neues OTP generieren"
+  "otp.title": "Neues OTP generieren",
+  "validation.error.http.470": "Ungültiges UVCI-Format",
+  "validation.error.http.480": "UVCI wurde bereits gesperrt"
 }
