--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,5 +85,7 @@
   "otp.instructions": "You can generate a private key here and copy it to the clipboard.",
   "otp.key": "Private key",
   "otp.link": "Generate OTP",
-  "otp.title": "Generate new OTP"
+  "otp.title": "Generate new OTP",
+  "validation.error.http.470": "Invalid UVCI format",
+  "validation.error.http.480": "UVCI already revoked"
 }
