--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -85,5 +85,7 @@
   "otp.instructions": "Vous pouvez ici créer une clé secrète et la copier dans le presse-papier.",
   "otp.key": "Clé secrète",
   "otp.link": "Générer un OTP",
-  "otp.title": "Générer un nouvel OTP"
+  "otp.title": "Générer un nouvel OTP",
+  "validation.error.http.470": "Format de l'UVCI invalide",
+  "validation.error.http.480": "UVCI déjà verrouillé"
 }
