--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -86,5 +86,7 @@
   "otp.instructions": "Qui è possibile creare una chiave segreta e copiarla negli appunti.",
   "otp.key": "Chiave segreta",
   "otp.link": "Genera OTP",
-  "otp.title": "Generare un nuovo OTP"
+  "otp.title": "Generare un nuovo OTP",
+  "validation.error.http.470": "Formato UVCI non valido",
+  "validation.error.http.480": "UVCI già bloccato"
 }
