feat(dashboard): change text for One-Time-Password
VACCINECER-877

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -56,9 +56,9 @@
   "dashboard.invalidateCertificate.title": "Zertifikat sperren",
   "dashboard.invalidateCertificate.description": "Hier können Sie erstellte Zertifikate sperren. Gesperrte Zertifikate werden als nicht gültig deklariert und können nicht mehr verwendet werden.",
   "dashboard.invalidateCertificate.action": "Zertifikat sperren",
-  "dashboard.otp.title": "Neues OTP generieren",
-  "dashboard.otp.description": "Hier können Sie ein neues OTP generieren",
-  "dashboard.otp.action": "OTP generieren",
+  "dashboard.otp.title": "Neues One-Time-Password generieren",
+  "dashboard.otp.description": "Hier können Sie ein neues One-Time-Password generieren. Das One-Time-Password benötigen Sie, um mit Ihrer Primäranwendung (z.B. Praxisinformationssystem, Kliniksoftware oder Apothekerlösung) automatisiert Covid-Zertifikate erzeugen zu können. Das One-Time-Password ist jeweils 12 Stunden gültig.",
+  "dashboard.otp.action": "One-Time-Password generieren",
   "footer.built.prefix": "Mit",
   "footer.built.suffix": "gebaut",
   "footer.legal": "Rechtliches",
