--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,9 +56,9 @@
   "dashboard.invalidateCertificate.title": "Revoke certificate",
   "dashboard.invalidateCertificate.description": "You can revoke generated certificates here. Revoked certificates are declared invalid and can no longer be used.",
   "dashboard.invalidateCertificate.action": "Revoke certificate",
-  "dashboard.otp.title": "Generate new OTP",
-  "dashboard.otp.description": "You can generate a new OTP here",
-  "dashboard.otp.action": "Generate OTP",
+  "dashboard.otp.title": "Generate new One-Time-Password",
+  "dashboard.otp.description": "You can generate a new One-Time-Password here. You need the One-Time-Password to be able to automatically generate Covid certificates with your primary system (e.g. practice information system, clinic software or pharmacist solution). The One-Time-Password is valid for 12 hours.",
+  "dashboard.otp.action": "Generate One-Time-Password",
   "footer.built.prefix": "Developed with",
   "footer.built.suffix": "",
   "footer.legal": "Terms and conditions",
