--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -56,9 +56,9 @@
   "dashboard.invalidateCertificate.title": "Verrouiller le certificat",
   "dashboard.invalidateCertificate.description": "Vous pouvez ici verrouiller des certificats établis. Les certificats révoqués sont déclarés comme non valides et ne peuvent plus être utilisés.",
   "dashboard.invalidateCertificate.action": "Verrouiller le certificat",
-  "dashboard.otp.title": "Générer un nouvel OTP",
-  "dashboard.otp.description": "Vous pouvez ici générer un nouvel OTP",
-  "dashboard.otp.action": "Générer un OTP",
+  "dashboard.otp.title": "Générer un nouvel One-Time-Password",
+  "dashboard.otp.description": "Vous pouvez ici générer un nouvel One-Time-Password. Vous avez besoin du mot du One-Time-Password pour pouvoir générer automatiquement des certificats Covid avec votre system primaire (par exemple, le système d'information du cabinet, le logiciel de la clinique ou la solution pour pharmaciens). Le One-Time-Password est valable pendant 12 heures.",
+  "dashboard.otp.action": "Générer un One-Time-Password",
   "footer.built.prefix": "Développé avec",
   "footer.built.suffix": "",
   "footer.legal": "Conditions d'utilisation",
