--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -57,9 +57,9 @@
   "dashboard.invalidateCertificate.title": "Bloccare un certificato",
   "dashboard.invalidateCertificate.description": "Qui è possibile bloccare i certificati creati. I certificati revocati sono dichiarati non validi e non possono più essere utilizzati.",
   "dashboard.invalidateCertificate.action": "Blocca certificato",
-  "dashboard.otp.title": "Generare un nuovo OTP",
-  "dashboard.otp.description": "Qui puoi generare un nuovo OTP",
-  "dashboard.otp.action": "Genera OTP",
+  "dashboard.otp.title": "Generare un nuovo One-Time-Password",
+  "dashboard.otp.description": "Qui puoi generare un nuovo One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password è valida per 12 ore.",
+  "dashboard.otp.action": "Genera One-Time-Password",
   "footer.built.prefix": "Sviluppata con",
   "footer.built.suffix": "",
   "footer.legal": "Nota legale",
