--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -86,6 +86,8 @@
   "otp.key": "Geheimschlüssel",
   "otp.link": "OTP generieren",
   "otp.title": "Neues OTP generieren",
+  "support.instructions": "Sollten Sie Probleme mit der Anwendung haben, wenden Sie sich bitte an den BIT-Helpdesk: 058 465 88 88",
+  "support.title": "Support",
   "validation.error.http.470": "Ungültiges UVCI-Format",
   "validation.error.http.480": "UVCI wurde bereits gesperrt"
 }
