--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,6 +25,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccination",
   "certificateCreate.step-one.enum.test": "Negative test",
   "certificateCreate.step-one.enum.recovery": "Recovered (positive test)",
+  "certificateCreate.step-two.personaldata.information": "The personal details must be identical to the identity document.",
   "certificateCreate.step-two.vaccinationinformation": "a person is only considered fully vaccinated and the associated COVID certificate is only valid if the number of doses received and the number of doses required is identical, e.g. recovery + vaccination: 1/1, vaccination with 2 doses: 2/2, booster 3/3.",
   "certificateCreate.step-three.title": "Certificate preview",
   "certificateCreate.step-three.description": "Please check the data you entered before generating the certificate",
