feat: show helpline phone number as link
VACCINECER-881

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,7 +89,7 @@
   "otp.key": "Private key",
   "otp.link": "Generate OTP",
   "otp.title": "Generate new OTP",
-  "support.instructions": "If you have any problems with the application, please contact the FOITT Helpdesk: 058 465 88 88",
+  "support.instructions": "If you have any problems with the application, please contact the FOITT Helpdesk:",
   "support.title": "Support",
   "validation.error.http.470": "Invalid UVCI format",
   "validation.error.http.480": "UVCI already revoked"
