--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -89,7 +89,7 @@
   "otp.key": "Geheimschlüssel",
   "otp.link": "OTP generieren",
   "otp.title": "Neues OTP generieren",
-  "support.instructions": "Sollten Sie Probleme mit der Anwendung haben, wenden Sie sich bitte an den BIT-Helpdesk: 058 465 88 88",
+  "support.instructions": "Sollten Sie Probleme mit der Anwendung haben, wenden Sie sich bitte an den BIT-Helpdesk:",
   "support.title": "Support",
   "validation.error.http.470": "Ungültiges UVCI-Format",
   "validation.error.http.480": "UVCI wurde bereits gesperrt"
