--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -89,7 +89,7 @@
   "otp.key": "Clé secrète",
   "otp.link": "Générer un OTP",
   "otp.title": "Générer un nouvel OTP",
-  "support.instructions": "Si vous rencontrez des problèmes avec l'application, veuillez contacter le helpdesk de l'OFIT: 058 465 88 88.",
+  "support.instructions": "Si vous rencontrez des problèmes avec l'application, veuillez contacter le helpdesk de l'OFIT:",
   "support.title": "Support",
   "validation.error.http.470": "Format de l'UVCI invalide",
   "validation.error.http.480": "UVCI déjà verrouillé"
