--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -68,6 +68,8 @@
   "footer.legal.url": "https://www.admin.ch/gov/fr/accueil/conditions-utilisation.html",
   "home.administration": "Instructions pour l'administration des utilisateurs (gestion déléguée) par le superutilisateur",
   "home.instructions": "Vous vous trouvez sur la page Internet permettant d'établir des certificats COVID.",
+  "home.issuer": "Documentation pour les émetteurs et émettrices",
+  "home.issuer.url": "https://www.bag.admin.ch/bag/fr/home/krankheiten/ausbrueche-epidemien-pandemien/aktuelle-ausbrueche-epidemien/novel-cov/information-fuer-die-aerzteschaft/dokumente-fuer-gesundheitsfachpersonen.html#73746234",
   "home.login.title": "Établir des certificats COVID",
   "home.login.subtitle": "Accès réservé aux personnes autorisées",
   "home.login.button": "Connexion",
