fix(text): update texts
VACCINECER-877

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -89,8 +89,8 @@
   "otp.button.create": "Geheimschlüssel erzeugen",
   "otp.instructions": "Sie können hier einen Geheimschlüssel erzeugen und in die Zwischenablage kopieren.",
   "otp.key": "Geheimschlüssel",
-  "otp.link": "OTP generieren",
-  "otp.title": "Neues OTP generieren",
+  "otp.link": "One-Time-Password generieren",
+  "otp.title": "Neues One-Time-Password generieren",
   "support.instructions": "Sollten Sie Probleme mit der Anwendung haben, wenden Sie sich bitte an den BIT-Helpdesk:",
   "support.title": "Support",
   "validation.error.http.470": "Ungültiges UVCI-Format",
