--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,8 +89,8 @@
   "otp.button.create": "Generate private key",
   "otp.instructions": "You can generate a private key here and copy it to the clipboard.",
   "otp.key": "Private key",
-  "otp.link": "Generate OTP",
-  "otp.title": "Generate new OTP",
+  "otp.link": "Generate One-Time-Password",
+  "otp.title": "Generate new One-Time-Password",
   "support.instructions": "If you have any problems with the application, please contact the FOITT Helpdesk:",
   "support.title": "Support",
   "validation.error.http.470": "Invalid UVCI format",
