--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -89,8 +89,8 @@
   "otp.button.create": "Créer une clé secrète",
   "otp.instructions": "Vous pouvez ici créer une clé secrète et la copier dans le presse-papier.",
   "otp.key": "Clé secrète",
-  "otp.link": "Générer un OTP",
-  "otp.title": "Générer un nouvel OTP",
+  "otp.link": "Générer un One-Time-Password",
+  "otp.title": "Générer un nouvel One-Time-Password",
   "support.instructions": "Si vous rencontrez des problèmes avec l'application, veuillez contacter le helpdesk de l'OFIT:",
   "support.title": "Support",
   "validation.error.http.470": "Format de l'UVCI invalide",
