--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -89,8 +89,8 @@
   "otp.button.create": "Crea chiave segreta",
   "otp.instructions": "Qui è possibile creare una chiave segreta e copiarla negli appunti.",
   "otp.key": "Chiave segreta",
-  "otp.link": "Genera OTP",
-  "otp.title": "Generare un nuovo OTP",
+  "otp.link": "Genera One-Time-Password",
+  "otp.title": "Generare un nuovo One-Time-Password",
   "support.instructions": "In caso di problemi con l'applicazione, si rivolga all'helpdesk dell'UFIT:",
   "support.title": "Supporto",
   "validation.error.http.470": "Formato UVCI non valido",
