--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -62,6 +62,9 @@
   "dashboard.otp.title": "Générer un nouvel One-Time-Password",
   "dashboard.otp.description": "Vous pouvez ici générer un nouvel One-Time-Password. Vous avez besoin du mot du One-Time-Password pour pouvoir générer automatiquement des certificats Covid avec votre system primaire (par exemple, le système d'information du cabinet, le logiciel de la clinique ou la solution pour pharmaciens). Le One-Time-Password est valable pendant 12 heures.",
   "dashboard.otp.action": "Générer un One-Time-Password",
+  "dashboard.upload.action": "Générer plusieurs certificats",
+  "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
+  "dashboard.upload.title": "Générer plusieurs certificats",
   "footer.built.prefix": "Développé avec",
   "footer.built.suffix": "",
   "footer.legal": "Conditions d'utilisation",
@@ -93,6 +96,16 @@
   "otp.title": "Générer un nouvel One-Time-Password",
   "support.instructions": "Si vous rencontrez des problèmes avec l'application, veuillez contacter le helpdesk de l'OFIT:",
   "support.title": "Support",
+  "upload.file.noneSelected": "Aucun fichier CSV sélectionné.",
+  "upload.file.select": "Sélectionnez un fichier CSV",
+  "upload.file.select.limit": "Taille maximale: 40 kB.",
+  "upload.file.upload": "Générer des certificats",
+  "upload.file.upload.success": "Les certificats ont été créés avec succès. Veuillez vérifier le fichier ZIP retourné.",
+  "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionnez le type des certificats à générer et chargez le fichier CSV contenant les données.",
+  "upload.link": "Générer plusieurs certificats",
+  "upload.title": "Générer plusieurs certificats",
+  "upload.type": "Sélectionnez le type de certificat",
   "validation.error.http.470": "Format de l'UVCI invalide",
-  "validation.error.http.480": "UVCI déjà verrouillé"
+  "validation.error.http.480": "UVCI déjà verrouillé",
+  "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné."
 }
