--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -62,6 +62,9 @@
   "dashboard.otp.title": "Generare un nuovo One-Time-Password",
   "dashboard.otp.description": "Qui puoi generare un nuovo One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password è valida per 12 ore.",
   "dashboard.otp.action": "Genera One-Time-Password",
+  "dashboard.upload.action": "Generare più certificati",
+  "dashboard.upload.description": "Qui potete generare più certificati.",
+  "dashboard.upload.title": "Generare più certificati",
   "footer.built.prefix": "Sviluppata con",
   "footer.built.suffix": "",
   "footer.legal": "Nota legale",
@@ -93,6 +96,16 @@
   "otp.title": "Generare un nuovo One-Time-Password",
   "support.instructions": "In caso di problemi con l'applicazione, si rivolga all'helpdesk dell'UFIT:",
   "support.title": "Supporto",
+  "upload.file.noneSelected": "Nessun file CSV selezionato.",
+  "upload.file.select": "Selezionare un file CSV",
+  "upload.file.select.limit": "Dimensione massima: 40 kB.",
+  "upload.file.upload": "Generare certificati",
+  "upload.file.upload.success": "I certificati sono stati creati con successo. Si prega di controllare il file ZIP restituito.",
+  "upload.instructions": "È possibile generare diversi certificati. Per farlo, seleziona il tipo di certificati da generare e carica il file CSV contenente i dati.",
+  "upload.link": "Generare più certificati",
+  "upload.title": "Generare più certificati",
+  "upload.type": "Seleziona il tipo di certificato",
   "validation.error.http.470": "Formato UVCI non valido",
-  "validation.error.http.480": "UVCI già bloccato"
+  "validation.error.http.480": "UVCI già bloccato",
+  "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito."
 }
