feat(shipping): add feature
VACCINECER-895 VACCINECER-663

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Country where test performed",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
   "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
+  "certificateCreate.form.label.shipping": "Shipping option",
   "certificateCreate.form.group.personalData": "Personal data",
   "certificateCreate.form.group.vaccine": "Vaccination",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Rapid antigen test",
   "certificateCreate.form.group.recovery": "Recovery",
+  "certificateCreate.shipping.app.code": "Delivery code",
+  "certificateCreate.shipping.options": "Select the shipping option",
+  "certificateCreate.shipping.options.app": "Deliver certificate in the app",
+  "certificateCreate.shipping.options.pdf": "Deliver certificate in PDF format",
+  "certificateCreate.shipping.options.post": "Deliver certificate by post",
+  "certificateCreate.shipping.post.cantonCodeSender": "Sender Canton Code",
+  "certificateCreate.shipping.post.city": "City",
+  "certificateCreate.shipping.post.streetAndNr": "Street and house number",
+  "certificateCreate.shipping.post.zipCode": "Postcode",
+  "certificateCreate.shipping.title": "Shipping",
   "certificateCreate.step-one.enum.vaccination": "Vaccination",
   "certificateCreate.step-one.enum.test": "Negative test",
   "certificateCreate.step-one.enum.recovery": "Recovered (positive test)",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "The date must be after 31.12.1899",
   "i18n.validation.dateAfterToday": "The date cannot be in the future",
   "i18n.validation.date": "A valid date is needed",
+  "i18n.validation.invalidAppDeliveryCode": "Invalid delivery code",
   "i18n.validation.time": "A valid time is needed",
   "i18n.validation.timeAfterToday": "The date cannot be in the future",
   "i18n.validation.matDatepickerParse": "Invalid date format. Please use \"dd.mm.yyyy hh:mm\"",
