--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Pays où le test a été effectué",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date du premier résultat positif",
   "certificateCreate.form.label.recovery.countryOfTest": "Pays où le test a été effectué",
+  "certificateCreate.form.label.shipping": "Option d'envoi",
   "certificateCreate.form.group.personalData": "Données personnelles",
   "certificateCreate.form.group.vaccine": "Vaccin",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Test rapide antigénique",
   "certificateCreate.form.group.recovery": "Guérison",
+  "certificateCreate.shipping.app.code": "Code d'envoi",
+  "certificateCreate.shipping.options": "Sélectionnez l'option d'envoi",
+  "certificateCreate.shipping.options.app": "Délivrer le certificat dans l'application",
+  "certificateCreate.shipping.options.pdf": "Délivrer le certificat en format PDF",
+  "certificateCreate.shipping.options.post": "Délivrer le certificat par voie postale",
+  "certificateCreate.shipping.post.cantonCodeSender": "Code du canton expéditeur",
+  "certificateCreate.shipping.post.city": "Ville",
+  "certificateCreate.shipping.post.streetAndNr": "Rue et numéro de maison",
+  "certificateCreate.shipping.post.zipCode": "Code postal",
+  "certificateCreate.shipping.title": "Livraison",
   "certificateCreate.step-one.enum.vaccination": "Vaccin",
   "certificateCreate.step-one.enum.test": "Test négatif",
   "certificateCreate.step-one.enum.recovery": "Guérison (test positif)",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "La date doit être située après le 31.12.1899",
   "i18n.validation.dateAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.date": "Merci d'indiquer une date correcte",
+  "i18n.validation.invalidAppDeliveryCode": "Code d'envoi invalide",
   "i18n.validation.time": "Merci d'indiquer une heure correcte",
   "i18n.validation.timeAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.matDatepickerParse": "Format de date invalide, merci d'utiliser \"jj.mm.aaaa hh:mm\"",
