--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
   "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
+  "certificateCreate.form.label.shipping": "Opzione di spedizione",
   "certificateCreate.form.group.personalData": "Dati personali",
   "certificateCreate.form.group.vaccine": "Vaccinazione",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Test antigenico rapido",
   "certificateCreate.form.group.recovery": "Guarigione",
+  "certificateCreate.shipping.app.code": "Codice di spedizione",
+  "certificateCreate.shipping.options": "Selezionare l'opzione di invio",
+  "certificateCreate.shipping.options.app": "Rilasciare il certificato nell'applicazione",
+  "certificateCreate.shipping.options.pdf": "Rilasciare il certificato in formato PDF",
+  "certificateCreate.shipping.options.post": "Rilasciare il certificato per posta",
+  "certificateCreate.shipping.post.cantonCodeSender": "Codice cantonale mittente",
+  "certificateCreate.shipping.post.city": "Città",
+  "certificateCreate.shipping.post.streetAndNr": "Via e numero civico",
+  "certificateCreate.shipping.post.zipCode": "Codice postale",
+  "certificateCreate.shipping.title": "Consegna",
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "La data deve essere successiva al 31.12.1899",
   "i18n.validation.dateAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.date": "È richiesta una data valida",
+  "i18n.validation.invalidAppDeliveryCode": "Codice di spedizione non valido",
   "i18n.validation.time": "È richiesta un'ora valida",
   "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
