--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten postiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
+  "certificateCreate.form.label.shipping": "Versand Option",
   "certificateCreate.form.group.personalData": "Personalien",
   "certificateCreate.form.group.vaccine": "Impfung",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Antigen-Schnelltest",
   "certificateCreate.form.group.recovery": "Genesung",
+  "certificateCreate.shipping.app.code": "Zustellungscode",
+  "certificateCreate.shipping.options": "Versand option auswählen",
+  "certificateCreate.shipping.options.app": "Zertifikat in der App liefern",
+  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF format liefern",
+  "certificateCreate.shipping.options.post": "Zertifikat per Post liefern",
+  "certificateCreate.shipping.post.cantonCodeSender": "Absender Kanton-Code",
+  "certificateCreate.shipping.post.city": "Stadt",
+  "certificateCreate.shipping.post.streetAndNr": "Strasse und Hausnummer",
+  "certificateCreate.shipping.post.zipCode": "Postleitzahl",
+  "certificateCreate.shipping.title": "Versand",
   "certificateCreate.step-one.enum.vaccination": "Impfung",
   "certificateCreate.step-one.enum.test": "Negativer Test",
   "certificateCreate.step-one.enum.recovery": "Genesen (Positiver Test)",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "Das Datum muss nach dem 31.12.1899 liegen",
   "i18n.validation.dateAfterToday": "Das Datum darf nicht in der Zukunft liegen",
   "i18n.validation.date": "Ein gültiges Datum wird benötigt",
+  "i18n.validation.invalidAppDeliveryCode": "Ungültiger Zustellungscode",
   "i18n.validation.time": "Eine gültige Zeit wird benötigt",
   "i18n.validation.timeAfterToday": "Das Datum darf nicht in der Zukunft liegen",
   "i18n.validation.matDatepickerParse": "Ungültiges Datumsformat, bitte verwenden Sie \"tt.mm.jjjj hh:mm\"",
