fix(text): update italian texts

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -12,7 +12,7 @@
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Data della vaccinazione",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Paese di vaccinazione",
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
-  "certificateCreate.form.label.test.manufacturer": "Fabbricante",
+  "certificateCreate.form.label.test.manufacturer": "Azienda produttrice",
   "certificateCreate.form.label.test.sampleDate": "Data/ora del test",
   "certificateCreate.form.label.test.center": "Effettuato da",
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
@@ -40,7 +40,7 @@
   "certificateCreate.step-four.generateNew": "Crea nuovo certificato",
   "certificateCreate.step-four.warning": "Il PDF contiene dati sensibili. Deve essere consegnato di persona o inviato attraverso un canale sicuro.",
   "certificateRevoke.button": "Blocca certificato",
-  "certificateRevoke.instructions": "Qui è possibile bloccare i certificati emessi Questi appaiono poi in una lista dei certificati bloccati.",
+  "certificateRevoke.instructions": "Qui è possibile bloccare i certificati emessi. Questi certificati appariranno in una apposita lista.",
   "certificateRevoke.link": "Blocca certificato",
   "certificateRevoke.success": "Il certificato con l'UVCI {{uvci}} è stato bloccato.",
   "certificateRevoke.title": "Bloccare il certificato",
@@ -59,8 +59,8 @@
   "dashboard.invalidateCertificate.title": "Bloccare un certificato",
   "dashboard.invalidateCertificate.description": "Qui è possibile bloccare i certificati creati. I certificati revocati sono dichiarati non validi e non possono più essere utilizzati.",
   "dashboard.invalidateCertificate.action": "Blocca certificato",
-  "dashboard.otp.title": "Generare un nuovo One-Time-Password",
-  "dashboard.otp.description": "Qui puoi generare un nuovo One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password è valida per 12 ore.",
+  "dashboard.otp.title": "Generare una nuova One-Time-Password",
+  "dashboard.otp.description": "Qui puoi generare una nuova One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password generata è valida per 12 ore.",
   "dashboard.otp.action": "Genera One-Time-Password",
   "dashboard.upload.action": "Generare più certificati",
   "dashboard.upload.description": "Qui potete generare più certificati.",
@@ -93,7 +93,7 @@
   "otp.instructions": "Qui è possibile creare una chiave segreta e copiarla negli appunti.",
   "otp.key": "Chiave segreta",
   "otp.link": "Genera One-Time-Password",
-  "otp.title": "Generare un nuovo One-Time-Password",
+  "otp.title": "Generare una nuova One-Time-Password",
   "support.instructions": "In caso di problemi con l'applicazione, si rivolga all'helpdesk dell'UFIT:",
   "support.title": "Supporto",
   "upload.file.noneSelected": "Nessun file CSV selezionato.",
