hotfix: marked csv upload as BETA. increased version

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -62,9 +62,9 @@
   "dashboard.otp.title": "Generare una nuova One-Time-Password",
   "dashboard.otp.description": "Qui puoi generare una nuova One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password generata è valida per 12 ore.",
   "dashboard.otp.action": "Genera One-Time-Password",
-  "dashboard.upload.action": "Generare più certificati",
+  "dashboard.upload.action": "Generare più certificati (BETA)",
   "dashboard.upload.description": "Qui potete generare più certificati.",
-  "dashboard.upload.title": "Generare più certificati",
+  "dashboard.upload.title": "Generare più certificati (BETA)",
   "footer.built.prefix": "Sviluppata con",
   "footer.built.suffix": "",
   "footer.legal": "Nota legale",
@@ -102,8 +102,8 @@
   "upload.file.upload": "Generare certificati",
   "upload.file.upload.success": "I certificati sono stati creati con successo. Si prega di controllare il file ZIP restituito.",
   "upload.instructions": "È possibile generare diversi certificati. Per farlo, seleziona il tipo di certificati da generare e carica il file CSV contenente i dati.",
-  "upload.link": "Generare più certificati",
-  "upload.title": "Generare più certificati",
+  "upload.link": "Generare più certificati (BETA)",
+  "upload.title": "Generare più certificati (BETA)",
   "upload.type": "Seleziona il tipo di certificato",
   "validation.error.http.470": "Formato UVCI non valido",
   "validation.error.http.480": "UVCI già bloccato",
